# CMakeList.txt : projet CMake pour tabmo-codding-challenge, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("tabmo-codding-challenge")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (tabmo-codding-challenge "tabmo-codding-challenge.cpp" "tabmo-codding-challenge.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
